# teegpt

./: Cargo.toml  Diagram.monopic  Dockerfile  Makefile  README.md  nitro-config-debug.json  nitro-config-prod.json
client/: Cargo.toml
client/src/: main.rs
server/: Cargo.toml
server/src/: axum_websocket.rs  lib.rs  main.rs
